# hs_feature2d

./: .gitmodules  CMakeLists.txt  README.md  dependencies.txt  make_proj_dir.sh  make_sln_dir.sh
$tf/: localversion.tfb  pendingchanges.tfb  properties.tf1
_myLaptop/include/hs_feature2d/std_sift/: image_helper.hpp
_myLaptop/src/std_sift/: image_helper.cpp
_myLaptop/unit_test/: CMakeLists.txt
_myLaptop/unit_test/std_sift/: CMakeLists.txt  test_std_sift.cpp
ci_script/: README.md  hs_feature2d_cmake_generate.sh  hs_feature2d_run_test.sh  hs_image_io_build_test.sh  hs_image_io_cmake_generate.sh
feature2d/: feature2d.sln  feature2d.vcxproj
include/hs_feature2d/std_sift/: ArrayHelper.hpp  base_type.h  base_type.hpp  filter.h  filter.hpp  image_helper.hpp  matrix.hpp  numeric_solver.hpp  std_sift.hpp
include/std_sift/: image_helper.hpp  sift_lib.hpp
src/: CMakeLists.txt
src/std_sift/: CMakeLists.txt  filter.cpp  image_helper.cpp  keypoint.cpp  numeric_solver.cpp  std_sift.cpp
unit_test/: test_main.cpp
unit_test/std_sift/: CMakeLists.txt  test_imghelper.cpp  test_opencv.cpp  test_std_sift.cpp
